[package]
name = "pci_config"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
name = "pci_config"

[dependencies]
x86_64 = { version = "0.14.3", default-features = false, features = ["instructions", "external_asm"] }
os_units = "0.4.0"
bit_field = "0.10.1"
